[package]
name = "hadron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0.91"
winit = "0.27.5"
ash = "0.37.0" # Vulkan bindings /+1.3.209
vk-shader-macros = "0.2.8"
rand = "0.8.5"
once_cell = "1.17.0"
chrono = { version = "0.4.23", features = ["serde", "rustc-serialize"] } 
#nalgebra = "0.31.3" # Linear algebra
#rusttype = "0.9.3" # Text rendering
#tobj = "3.2.3" # Model loading
#cpal = "0.14.1" # Audio playback
#parry3d-f64 = "0.11.1" # Collision detection

# 
collider = { path = "../collider" }
